--- a/index.html
+++ b/index.html
@@ -43,11 +43,174 @@
                     <div class="blog-img">
                         <img src="assets/Blog Image.png" alt="">
                        <h3 class="transfer">
-                        Transfer
+                       <a href="">Transfer</a> 
                        </h3>
                        <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
                        <span></span>
                     </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="assets/Blog Image.png" alt="">
+                       <h3 class="transfer">
+                       <a href="">Transfer</a> 
+                       </h3>
+                       <h2>Transfer Live : Chlesea in talks over kimpenbe transfer</h2>
+                       <span></span>
+                    </div>
+
+                    <div class="time section">
+                    <span class="clock">  <i class="fa-regular fa-clock"></i>
+                        <i class="fa-sharp fa-solid fa-input-numeric">10 h </i> </p>
+                      </span>
+                      <span class="comment"> <i class="fa-solid fa-comment-dots"></i>
+                         <i class="fa-sharp fa-solid fa-input-numeric">30 </i>
+                      </span>
+                    </div>
+                    </div>
+              
                 </div>
 
             </div>
