--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/71adc8d740.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
+    <main>
     <section class="container">
         <div class="top-1">
             <div class="top-1-blog">
@@ -38,6 +42,8 @@
                 </div>
                 <div class="blog-page"><a href="">Blog</a></div>
             </div>
+
+            
             <div class="blogs">
                 <div class="blog">
                     <div class="blog-img">
@@ -216,6 +222,25 @@
             </div>
         </div>
     </section>
+</main>
     
 </body>
+
+<footer>
+    <div class="footer-section">
+    <div class="footer-head>">
+    <h1>Goal</h1>
+</div>
+    <hr>
+    <div class="support-link">
+        <a href="">Contact Us</a>
+        <a href="">Terms of Service</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Privacy Setting</a>
+        <a href="">Goal App</a>
+        <a href="">Goal Live</a>
+
+    </div>
+</div>
+</footer>
 </html>
