--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="container">
         <div class="top-1">
             <div class="top-1-blog">
-                <h1>The greatest Show On The Earth</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ea, a beatae nemo odio eaque sit doloribus modi reiciendis culpa, fugiat maxime ex perspiciatis ratione neque laudantium ad possimus! Culpa?</p>
+                <h1>  The greatest Show On The Earth</h1>
+                <p class="elipsis"><title></title>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Unde ea, a beatae nemo odio eaque sit doloribus modi reiciendis culpa, fugiat maxime ex perspiciatis ratione neque laudantium ad possimus! Culpa?</title></p>
 
                 <div class="live-link">
                   
@@ -32,18 +32,20 @@
         </div>
     </section>
 
+    <!--Top-2 section-->
 
     <section class="container">
         <div class="top-2">
             <div class="summary-item">
-                <div class="upcoming"><a href="">Upcoming Match</a></div>
+                <div class="upcoming"><a href="up-coming- match.html">Upcoming Match</a></div>
                 <div class="group-page">
                     <a href="">All Group</a>
                 </div>
-                <div class="blog-page"><a href="">Blog</a></div>
+                <div class="blog-page">
+                    <a href="">Blog</a></div>
             </div>
 
-            
+
             <div class="blogs">
                 <div class="blog">
                     <div class="blog-img">
