--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <section class="container">
         <div class="top-2">
             <div class="summary-item">
-                <div class="upcoming"><a href="up-coming- match.html">Upcoming Match</a></div>
-                <div class="group-page">
+                <div class="upcoming content"><a href="up-coming- match.html">Upcoming Match</a></div>
+                <div class="group-page content">
                     <a href="">All Group</a>
                 </div>
-                <div class="blog-page">
+                <div class="blog-page content">
                     <a href="">Blog</a></div>
             </div>
 
